- Added a hidden Built-In weapon mount that allows all weapon categories. This can be used by vehicles that come with weapon mounts that are always installed. 
- Critters can now start with cyberware and bioware.
- Added support for weapons using required and forbidden nodes. This is mostly intended to support underbarrel weapons, but can be used in the same way as other objects. 
Application Fixes:
- Fixed issues with the Balistic Shield Exotic Melee Weapon choice not being present in the Exotic Weapon skill selector window. Closes #3856
- Dedicated Spellslinger properly allows for purchasing spells while the character does not have enough karma to afford it. Closes #3859
- Fixed a regression with lifestyle qualities not properly storing their Area, Security and Comfort values. Closes #3869
- Fixed an issue with martial arts techniques improperly storing their Source as the Page.
- Fixed a regression in the behaviour of availability values improperly causing Built-In items to count towards availabiltiy at character creation. 
- The SwapSkillAtribute Improvement now properly makes the attribute get swapped for the selected attribute.
- Fixed a crash when binding Foci, if the treenode for the focus had not been selected. Closes #3905

Data Changes:
- Tetrachromacy now adds adds +3 to Perception, with a (Visual) condition. This will be exposed to the Print method for character sheets at a later date. 
- Grapple Fist cyberware now properly uses the skill of the Grapple Gun Exotic skill.
- Fixed an issue with the Private Investigator life module that prevented it from being added.
- Removed Ratings from Cosmetic Surgery, replaced with variable cost.
- Added RatingLabel to Fiberoptic Hair and Telescoping Limbs. 
- Fixed an issue with the Point Priority Chargen customdata file causing metahumans to be unavailable.
- Added missing Device Ratings to the RG Pi-Tacs.
- Added missing minimum rating on Reaction Enhancers, courtesy of JoshuarTree.