@@ -1019,10 +1019,13 @@ namespace Chummer.Backend.Equipment
         {
             get
             {
+                //TODO: Move to user-accessible options
+                if (IsDrone && Category == "Drones: Anthro") 
+                    //Rigger 5: p145
+                    return 8;
                 if (IsDrone)
                     return 6;
-                else
-                    return 12;
+                return 12;
             }
         }
 
